# Etl-com-python-e-duckdb-zero-ao-deploy

./: .gitignore  README.md  duckdb.db  pipeline.py  pyproject.toml
