[tool.poetry]
name = "etl-com-python-e-duckdb-zero-ao-deploy"
version = "0.1.0"
description = ""
authors = ["Roberto Ricci <roberto.rricci@gmail.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
gdown = "^5.1.0"
duckdb = "^0.10.2"
streamlit = "^1.34.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
